tests/badly_positioned_func_sig/badly_positioned_func_sig.exp
Error ----------------------------------------------------------------------------------------------------- test.js:9:29

Cannot initialize property `foo` with object literal because string [1] is incompatible with number [2] in property
`bar`. [incompatible-type]

   test.js:9:29
   9|   foo: {|bar: Bar|} = {bar: 'cat'};
                                  ^^^^^ [1]

References:
   test.js:9:15
   9|   foo: {|bar: Bar|} = {bar: 'cat'};
                    ^^^ [2]



Found 1 error
